# mox-erc20-token

./: .coverage  .deployments.db  .env  README.md  justfile  pyproject.toml
.hypothesis/constants/: 445e44d2f1de482f  82bb6acd882fd696
.hypothesis/examples/04e6b3400353b141/: 189dcc7e1e6a4c92  94c6c6dc4f6b7c23
contracts/: snek_token.vy
script/: snek_token_deploy.py
tests/: test_snek_token.py
tests/fuzzing/: test_statefull_snek_token.py
